@@ -1,7 +1,7 @@
 This file is part of GParted
-Copyright (C) 2004, 2005, 2006, 2007, 2008
+Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009
 	Bart Hakvoort
-Portions Copyright (C) 2008
+Portions Copyright (C) 2008, 2009
 	Curtis Gedak
 
 This file may be modified and/or distributed without restriction.  This is
@@ -25,6 +25,9 @@ Curtis Gedak		<gedakc@users.sourceforge.net>
 	* Created Dialog_Partion_Label.h, Dialog_Partition_Label.cc
 	* Created OperationLabelPartition.h, OperationLabelPartition.cc
 	* Maintained from official 0.3.5 release onward 
+
+Luca Bruno			<lucab@debian.org>
+	* Wrote patch for initial btrfs support.
 
 Michael Monreal		<michael.monreal@gmx.net>
 	* Wrote small patch to implement themed app icon in hicolor
