@@ -104,8 +104,9 @@ void DialogFeatures::load_filesystems( const std::vector<FS> & FILESYSTEMS )
 	//fill the features chart with valid file systems 
 	for ( unsigned short t = 0; t < FILESYSTEMS .size() ; t++ )
 	{
-		//Skip luks, lvm2, and unknown because these are not file systems
-		if ( FILESYSTEMS[ t ] .filesystem == GParted::FS_LUKS ||
+		//Skip btrfs, luks, lvm2, and unknown because these are not file systems
+		if ( FILESYSTEMS[ t ] .filesystem == GParted::FS_BTRFS ||
+		     FILESYSTEMS[ t ] .filesystem == GParted::FS_LUKS ||
 		     FILESYSTEMS[ t ] .filesystem == GParted::FS_LVM2 ||
 		     FILESYSTEMS[ t ] .filesystem == GParted::FS_UNKNOWN
 		   )
