@@ -1,3 +1,14 @@
+2009-02-23  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/Utils.h,
+	  src/Dialog_Partition_New.cc,
+	  src/DialogFeatures.cc,
+	  src/GParted_Core.cc,
+	  src/Utils.cc,
+	  src/Win_GParted.cc: Added detection of btrfs file system.
+	  - Thanks to Luca Bruno for the original btrfs patch that I adapted.
+	  - Related to GParted bug #571170
+
 2009-02-20  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/Win_GParted.cc: Fixed compiler warning regarding parentheses.
